--- a/ReadSpellData/ReadSpellData.csproj
+++ b/ReadSpellData/ReadSpellData.csproj
@@ -57,8 +57,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreatureStructure.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Export.cs" />
+    <Compile Include="ObjectStructure.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reading.cs" />
