--- a/ReadSpellData/packages.config
+++ b/ReadSpellData/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
   <package id="ClosedXML" version="0.94.2" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net452" />
   <package id="FastMember" version="1.3.0" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.19" targetFramework="net452" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
 </packages>
